--- a/_posts/2024-10-10-post1.md
+++ b/_posts/2024-10-10-post1.md
@@ -1,6 +1,6 @@
 ---
-title: Titulo Random
+title: Kill Chain : PROCESOS
 date: 2024-10-10 22:30:00 +05:00
-categories: [keyword1, keyword2]
-tags: [experiment, scanning, execution]  # TAG names should always be lowercase
+categories: [Reconnaissance, Weaponization , Delivery / Exploitation, Installation ,Actions on Object, Conclusions]
+tags: [NMAP, Kali Linux , Metasploit]  # TAG names should always be lowercase
 --
